# Noble-Engine

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: slang.cmake  thirdparty.cmake  vulkan.cmake
res/shaders/src/: meow.slang
resources/models/: sponza_old.gltf  viking_room.mtl
resources/shaders/: composite_0.slang  composite_1.slang  debug.slang  mesh_render.slang
resources/shaders/include/: color.slang  common.slang  palette.slang  ss_raytracer.slang  transforms.slang  uniforms.slang
resources/shaders/src/: composite.slang  composite_0.slang  composite_1.slang  meow.slang  mesh_render.slang
src/: NobleEngine.cpp
src/common/: HashUtils.cpp  HashUtils.h  Math.cpp  Math.h  Utility.cpp  Utility.h
src/core/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  InputManager.cpp  InputManager.h  Platform.cpp  Platform.h  ResourceManager.h  Runtime.cpp  Runtime.h  WindowContext.h
src/core/common/: TinyObjLoaderUsage.cpp  Types.h  stbUsage.cpp  tinygltfUsage.cpp
src/core/common/libraries/: stbUsage.cpp  stbUsage.h  tinygltfUsage.cpp  tinygltfUsage.h  tinyobjloaderUsage.cpp  tinyobjloaderUsage.h
src/core/concurrency/: ThreadPool.h
src/core/debug/: ErrorHandling.h  Logger.cpp  Logger.h
src/core/engine/: DebugState.h  Engine.cpp  Engine.h
src/core/entities/camera/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  CameraFreeFly.cpp  CameraFreeFly.h  ICameraBehavior.h
src/core/entities/objects/: Object.cpp  Object.h  ObjectManager.cpp  ObjectManager.h
src/core/entities/scenes/: Scene.h
src/core/input/: InputManager.cpp  InputManager.h  KeyMap.h
src/core/multithreading/: ThreadPool.h  ThreadRegistry.cpp  ThreadRegistry.h
src/core/objects/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Object.cpp  Object.h
src/core/objects/camera/: Camera.cpp  CameraController.cpp
src/core/objects/object/: Material.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Vertex.h
src/core/platform/: Platform.cpp  Platform.h  PlatformWindows.cpp  SignalHandlers.cpp  SignalHandlers.h  Window.cpp  Window.h  WindowContext.h
src/core/render/: BindingSlots.h  FrameUniforms.h  FrustumCuller.cpp  FrustumCuller.h
src/core/resources/: AssetManager.cpp  AssetManager.h  AssetPaths.h  AsyncResourceManager.h  Vertex.h
src/core/resources/images/: Image.h  ImageManager.cpp  ImageManager.h
src/core/resources/models/: Material.h  Mesh.cpp  Mesh.h  Model.h  ModelManager.cpp  ModelManager.h  Vertex.h
src/graphics/: GraphicsAPI.h
src/graphics/vulkan/: VulkanContext.cpp  VulkanContext.h  VulkanDebugger.cpp  VulkanDebugger.h  VulkanDevice.cpp  VulkanDevice.h  VulkanInstance.cpp  VulkanInstance.h  VulkanLogger.cpp  VulkanLogger.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSurface.cpp  VulkanSurface.h  VulkanSwapchain.cpp  VulkanSwapchain.h
src/graphics/vulkan/common/: VulkanDebugger.cpp  VulkanDebugger.h  VulkanEntityOwner.h  VulkanHeader.h
src/graphics/vulkan/core/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanCapabilities.cpp  VulkanCapabilities.h  VulkanCommandManager.cpp  VulkanCommandManager.h  VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanInstance.cpp  VulkanInstance.h  VulkanQueueSubmitter.cpp  VulkanQueueSubmitter.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSurface.cpp  VulkanSurface.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanSwapchainManager.cpp  VulkanSwapchainManager.h  VulkanSyncObjects.cpp  VulkanSyncObjects.h  VulkanSynchronization.cpp  VulkanSynchronization.h
src/graphics/vulkan/core/memory/: VmaUsage.cpp  VmaUsage.h  VulkanBuffer.cpp  VulkanBuffer.h
src/graphics/vulkan/pipeline/: VulkanComputePipeline.cpp  VulkanComputePipeline.h  VulkanComputePipelineManager.cpp  VulkanComputePipelineManager.h  VulkanFrameGraph.cpp  VulkanFrameGraph.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanGraphicsPipelineManager.cpp  VulkanGraphicsPipelineManager.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanPipelineDescriptor.h  VulkanPipelineManager.cpp  VulkanPipelineManager.h  VulkanShaderProgram.cpp  VulkanShaderProgram.h  VulkanShaderProgramManager.cpp  VulkanShaderProgramManager.h
src/graphics/vulkan/pipeline/compute/: VulkanComputePipeline.cpp  VulkanComputePipeline.h
src/graphics/vulkan/pipeline/framegraph/: VulkanFrameGraph.cpp  VulkanFrameGraph.h
src/graphics/vulkan/pipeline/graphics/: VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h
src/graphics/vulkan/pipeline/rendergraph/: VulkanRenderGraph.cpp  VulkanRenderGraph.h  VulkanRenderGraphBuilder.cpp  VulkanRenderGraphBuilder.h  VulkanRenderResources.cpp  VulkanRenderResources.h
src/graphics/vulkan/pipeline/shader_interface/: VulkanPushConstant.h
src/graphics/vulkan/pipeline/shaders/: VulkanShaderProgram.cpp  VulkanShaderProgram.h  VulkanShaderProgramManager.cpp  VulkanShaderProgramManager.h
src/graphics/vulkan/rendergraph/: VulkanRenderGraph.cpp  VulkanRenderGraph.h  VulkanRenderGraphBuilder.cpp  VulkanRenderGraphBuilder.h  VulkanRenderPassFactory.cpp  VulkanRenderPassFactory.h  VulkanRenderResources.cpp  VulkanRenderResources.h
src/graphics/vulkan/rendergraph/dispatch/: VulkanDispatchCall.h
src/graphics/vulkan/rendergraph/draw/: VulkanDrawBatch.h  VulkanDrawBatchBuilder.cpp  VulkanDrawBatchBuilder.h  VulkanDrawCall.cpp  VulkanDrawCall.h  VulkanFrameCuller.cpp  VulkanFrameCuller.h  VulkanFrameDraws.cpp  VulkanFrameDraws.h  VulkanInstanceHandle.h  VulkanInstanceHandleBuffer.cpp  VulkanInstanceHandleBuffer.h  VulkanRenderItem.h
src/graphics/vulkan/resources/: StbUsage.cpp  StbUsage.h  VulkanDescriptor.cpp  VulkanDescriptor.h  VulkanDescriptorManager.cpp  VulkanDescriptorManager.h  VulkanFrameContext.h  VulkanFrameResources.cpp  VulkanFrameResources.h  VulkanImage.cpp  VulkanImage.h  VulkanMesh.cpp  VulkanMesh.h  VulkanMeshManager.cpp  VulkanMeshManager.h  VulkanPushConstant.h  VulkanRenderObject.cpp  VulkanRenderObject.h  VulkanUniformBuffers.cpp  VulkanUniformBuffers.h
src/libraries/: tinygltfUsage.h  tinyobjloaderUsage.cpp  tinyobjloaderUsage.h
(+116 files in other folders)
